--- a/51jdsa-14fadas_en/style.css
+++ b/51jdsa-14fadas_en/style.css
@@ -781,7 +781,7 @@ th {
 
 .sidebar .jimukyoku p {
   padding: 0 20px 20px 20px;
-  font-size: 13px;
+  font-size: 15px;
   color: #fff;
   line-height: 1.7em;
 }
@@ -1051,6 +1051,84 @@ body {
   top: 0;
   left: 0;
   z-index: 3;
+}
+
+.greeting p {
+  text-align: justify;
+  text-indent: 1em;
+  line-height: 1.3;
+  margin: 0 0 0.25em 0;
+}
+
+.general_info {
+  font-size: 17px;
+}
+
+.general_info a {
+  color: #0a4682;
+  text-decoration: underline;
+}
+
+.general_info a:hover {
+  color: #0e6bc7;
+}
+
+.general_info dl {
+  width: 100%;
+  margin: 0 0 34px 0;
+}
+
+.general_info dl dt {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  color: #0a4682;
+  margin: 0 0 30px 0;
+  line-height: 1.2;
+  padding: 6px 0 6px 8px;
+  background: #f6f6f9;
+}
+
+.general_info dl dd {
+  width: 100%;
+  padding: 0 0 0 18px;
+}
+
+.general_info_en {
+  font-size: 17px;
+}
+
+.general_info_en a {
+  color: #0a4682;
+  text-decoration: underline;
+}
+
+.general_info_en a:hover {
+  color: #0e6bc7;
+}
+
+.general_info_en dl {
+  width: 100%;
+  margin: 0 0 34px 0;
+}
+
+.general_info_en dl dt {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  color: #0a4682;
+  margin: 0 0 30px 0;
+  line-height: 1.2;
+  padding: 6px 0 6px;
+  background: #f6f6f9;
+  padding-left: 2.1em;
+  text-indent: -1.6em;
+}
+
+.general_info_en dl dd {
+  line-height: 1.3;
+  width: 100%;
+  padding: 0 0 0 18px;
 }
 
 /*---------------------------- スライダー ---------------------------- */
