--- a/51jdsa-14fadas/style.css
+++ b/51jdsa-14fadas/style.css
@@ -849,7 +849,8 @@ th {
 
 .information .info_area {
   background-color: #fff;
-  height: 130px;
+  min-height: 60px;
+  max-height: 130px;
   overflow-y: scroll;
   overflow-x: hidden;
   padding: 15px;
@@ -876,6 +877,79 @@ th {
   color: #b60005;
   width: 10px;
   height: 10px;
+}
+
+.sponsor {
+  line-height: 1.4;
+}
+
+.sponsor p {
+  margin: 0 0 30px 0;
+}
+
+.sponsor p a {
+  color: #0a4682;
+  text-decoration: underline;
+}
+
+.sponsor p a:hover {
+  color: #0e6bc7;
+}
+
+.sponsor_table {
+  width: 100%;
+  text-align: center;
+  border-collapse: collapse;
+  border-spacing: 0;
+  border: 1px solid #aaa;
+}
+
+.sponsor tr th {
+  font-weight: bold;
+  padding: 20px 10px;
+  vertical-align: middle;
+  text-align: center;
+  background: #eee;
+  border-left: 1px solid #aaa;
+  border-spacing: 0;
+}
+
+.sponsor tr th:first-child {
+  width: 160px;
+}
+
+.sponsor tr th:nth-child(2) {
+  width: 280px;
+}
+
+.sponsor tr th:last-child {
+  width: 160px;
+}
+
+.sponsor tr td {
+  padding: 20px 10px;
+  vertical-align: middle;
+  border-top: 1px solid #aaa;
+  border-left: 1px solid #aaa;
+  border-spacing: 0;
+}
+
+.sponsor .sponsor_table_btn {
+  font-size: 15px;
+  display: inline-block;
+  color: #fff;
+  width: 200px;
+  padding: 15px 10px;
+  margin: 0 auto;
+  border-radius: 6px;
+  box-shadow: 0 3px 5px 0 #ccc;
+  border: 1px solid #0066cc;
+  background: #0066cc;
+  font-weight: bold;
+}
+
+.sponsor .sponsor_table_btn:hover {
+  border: 1px solid #0066cc;
 }
 
 /*---------------------------- ベースカラー ---------------------------- */
@@ -1078,7 +1152,7 @@ body {
 
 .general_info dl {
   width: 100%;
-  margin: 0 0 34px 0;
+  margin: 0 0 30px 0;
 }
 
 .general_info dl dt {
@@ -1086,7 +1160,7 @@ body {
   align-items: center;
   font-size: 20px;
   color: #0a4682;
-  margin: 0 0 30px 0;
+  margin: 0 0 12px 0;
   line-height: 1.2;
   padding: 6px 0 6px 8px;
   background: #f6f6f9;
@@ -1112,7 +1186,7 @@ body {
 
 .general_info_en dl {
   width: 100%;
-  margin: 0 0 34px 0;
+  margin: 0 0 30px 0;
 }
 
 .general_info_en dl dt {
@@ -1120,10 +1194,12 @@ body {
   align-items: center;
   font-size: 20px;
   color: #0a4682;
-  margin: 0 0 30px 0;
+  margin: 0 0 14px 0;
   line-height: 1.2;
-  padding: 6px 0 6px 8px;
+  padding: 6px 0 6px;
   background: #f6f6f9;
+  padding-left: 2.1em;
+  text-indent: -1.6em;
 }
 
 .general_info_en dl dd {
