--- a/51jdsa-14fadas_en/style.css
+++ b/51jdsa-14fadas_en/style.css
@@ -849,7 +849,8 @@ th {
 
 .information .info_area {
   background-color: #fff;
-  height: 130px;
+  min-height: 60px;
+  max-height: 130px;
   overflow-y: scroll;
   overflow-x: hidden;
   padding: 15px;
@@ -1075,7 +1076,7 @@ body {
 
 .general_info dl {
   width: 100%;
-  margin: 0 0 34px 0;
+  margin: 0 0 30px 0;
 }
 
 .general_info dl dt {
@@ -1083,7 +1084,7 @@ body {
   align-items: center;
   font-size: 20px;
   color: #0a4682;
-  margin: 0 0 30px 0;
+  margin: 0 0 12px 0;
   line-height: 1.2;
   padding: 6px 0 6px 8px;
   background: #f6f6f9;
@@ -1109,7 +1110,7 @@ body {
 
 .general_info_en dl {
   width: 100%;
-  margin: 0 0 34px 0;
+  margin: 0 0 30px 0;
 }
 
 .general_info_en dl dt {
@@ -1117,7 +1118,7 @@ body {
   align-items: center;
   font-size: 20px;
   color: #0a4682;
-  margin: 0 0 30px 0;
+  margin: 0 0 14px 0;
   line-height: 1.2;
   padding: 6px 0 6px;
   background: #f6f6f9;
